[gd_scene load_steps=2 format=2]

[ext_resource path="res://enemy/enemy_player_detector.gd" type="Script" id=1]

[node name="PlayerDetector" type="Area2D"]
collision_layer = 0
collision_mask = 3
script = ExtResource( 1 )

[node name="Buffer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_PlayerDetector_body_exited"]
[connection signal="timeout" from="Buffer" to="." method="_on_Buffer_timeout"]
